# BetterDouble

./: CMakeLists.txt  Doxyfile  README.md
example/: example.cpp
include/betterdouble/: betterdouble-eigen.hpp  betterdouble.h  betterdouble.hpp  betterdouble.hxx  differentiable-eigen.hpp  differentiable.hpp  differentiable.hxx  real-eigen.hpp  real.hpp  real.hxx
test/: test.cpp
